# vendingtracker

./: .gitignore  .pre-commit-config.yaml  README.md  deploy.sh  pyproject.toml  run.sh  sonar-project.properties  tox.ini
.github/workflows/: python-tests.yml
backend/: .env_example  .gitignore  .pre-commit-config.yaml  README.md  app.py  create-table.sql  pyproject.toml  setup.cfg  tox.ini
backend/routes/: items_routes.py  machines_routes.py  purchase_routes.py  routes.py  stock_routes.py  utils.py
backend/scripts/: create-database-with-data.sql  create-server.sh  create-table.sql
backend/tests/: conftest.py  test_items_routes.py  test_machines_routes.py  test_purchase_routes.py  test_stocks_routes.py  test_utils.py
frontend/client/: package-lock.json  vue.config.js
frontend/client/src/: App.vue
frontend/client/src/components/: MachineTable.vue
frontend/client/src/router/: index.js
frontend/client/src/views/: HomeView.vue  PingView.vue
